update ProfilePage, edit swagger, edit pagination page from offset to cursor
