# server/src/controllers/chatRoom.controller.ts
@@ -7,11 +7,12 @@ import {
   NotFoundResponse,
 } from "../helpers/constant";
 import { ChatRoom } from "../models/ChatRoom.model";
+import { Types } from "mongoose";
 
 export const chatRoomsRouter: IRouter = Router();
 
 const chatRoomListValidationChains = [
-  oneOf([query("page").isInt({ min: 0 }), query("page").isEmpty()]),
+  oneOf([query("cursor").isString(), query("size").isEmpty()]),
   oneOf([query("size").isInt({ min: 10, max: 100 }), query("size").isEmpty()]),
 ];
 
@@ -27,14 +28,15 @@ chatRoomsRouter.get(
       } as IErrorModelMessageResponse);
     }
 
-    const page = parseInt(req.query?.page as string, 10) || 1;
+    const cursor = req.query?.cursor as string;
     const size = parseInt(req.query?.size as string, 10) || 10;
 
-    const chatRooms = await ChatRoom.find({})
+    const chatRooms = await ChatRoom.find(
+      !cursor ? {} : { _id: { $lt: new Types.ObjectId(cursor) } }
+    )
       .populate("users")
       .sort({ createdAt: -1 })
-      .skip((page - 1) * size)
-      .limit(page * size);
+      .limit(size);
     res.status(200).json(chatRooms);
   }
 );
@@ -159,7 +161,7 @@ chatRoomsRouter.delete(
 );
 
 const chatRoomMessagesValidationChains = [
-  oneOf([query("page").isInt({ min: 0 }), query("page").isEmpty()]),
+  oneOf([query("cursor").isString(), query("size").isEmpty()]),
   oneOf([query("size").isInt({ min: 10, max: 100 }), query("size").isEmpty()]),
 ];
 
@@ -175,7 +177,7 @@ chatRoomsRouter.get(
       } as IErrorModelMessageResponse);
     }
 
-    const page = parseInt(req.query?.page as string, 10) || 1;
+    const cursor = req.query?.cursor as string;
     const size = parseInt(req.query?.size as string, 10) || 10;
 
     if (!(await ChatRoom.hasUserInRoom(req.params.id, req.user?.id))) {
@@ -183,9 +185,9 @@ chatRoomsRouter.get(
     }
 
     const messages = await ChatMessage.findByRoomId(req.params.id)
+      .find(!cursor ? {} : { _id: { $lt: new Types.ObjectId(cursor) } })
       .sort({ createdAt: -1 })
-      .skip((page - 1) * size)
-      .limit(page * size);
+      .limit(size);
 
     res.status(200).json(messages);
   }
